{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 84,
  "lineage": "75014ba8-563d-fb67-79b9-5a893382a543",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:253021683072:internet-gateway/igw-0cce817ae2ea4f740",
            "id": "igw-0cce817ae2ea4f740",
            "owner_id": "253021683072",
            "tags": {
              "Name": "Remove 04 Internet Gateway"
            },
            "tags_all": {
              "Name": "Remove 04 Internet Gateway",
              "proyecto": "remove-04"
            },
            "vpc_id": "vpc-076a962837fc93cf5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:253021683072:route-table/rtb-0ff8729a37bbefba4",
            "id": "rtb-0ff8729a37bbefba4",
            "owner_id": "253021683072",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cce817ae2ea4f740",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cce817ae2ea4f740",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table",
              "proyecto": "remove-04"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a962837fc93cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c58fc9d29435885",
            "route_table_id": "rtb-0ff8729a37bbefba4",
            "subnet_id": "subnet-0ffc8cfdd7583f540"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public_rt",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc3c8d3695d1cf5b",
            "route_table_id": "rtb-0ff8729a37bbefba4",
            "subnet_id": "subnet-07dc7cc652537c5dd"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public_rt",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bdd_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:253021683072:security-group/sg-074c77e33cf084171",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074c77e33cf084171",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres",
            "name_prefix": "",
            "owner_id": "253021683072",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "proyecto": "remove-04"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a962837fc93cf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:253021683072:subnet/subnet-0ffc8cfdd7583f540",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "14.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffc8cfdd7583f540",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253021683072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Remove 04 Public Subnet 1"
            },
            "tags_all": {
              "Name": "Remove 04 Public Subnet 1",
              "proyecto": "remove-04"
            },
            "vpc_id": "vpc-076a962837fc93cf5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:253021683072:subnet/subnet-07dc7cc652537c5dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "14.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dc7cc652537c5dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253021683072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Remove 04 Public Subnet 2"
            },
            "tags_all": {
              "Name": "Remove 04 Public Subnet 2",
              "proyecto": "remove-04"
            },
            "vpc_id": "vpc-076a962837fc93cf5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:253021683072:vpc/vpc-076a962837fc93cf5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "14.10.0.0/16",
            "default_network_acl_id": "acl-04e5ab529c7776a9b",
            "default_route_table_id": "rtb-026613f9bcede8e28",
            "default_security_group_id": "sg-0a52197b44ceb0c16",
            "dhcp_options_id": "dopt-0e06b3804e4469667",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076a962837fc93cf5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026613f9bcede8e28",
            "owner_id": "253021683072",
            "tags": {
              "Name": "VPC Remove 04"
            },
            "tags_all": {
              "Name": "VPC Remove 04",
              "proyecto": "remove-04"
            }
          }
        }
      ]
    }
  ]
}